--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^6.0.0-beta.3",
+    "@ngrx/store-devtools": "^6.0.0-beta.3",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
